Refactor doc for Pan, RC, SAMP, SaveImage, Thumbs, Toolbar, WBrowser, WCSMatch, and Zoom plugins. This completes the round for global plugins.

--- a/ginga/examples/configs/plugin_Thumbs.cfg
+++ b/ginga/examples/configs/plugin_Thumbs.cfg
@@ -5,7 +5,7 @@
 
 # If you revisit the same directories frequently
 # caching thumbs saves a lot of time when they need to be regenerated
-cache_thumbs = True
+cache_thumbs = False
 
 # cache location-- "local" puts them in a .thumbs subfolder, otherwise
 # they are cached in ~/.ginga/thumbs
@@ -23,33 +23,34 @@ mouseover_name_key = 'NAME'
 # How many seconds to wait after an image is altered to begin trying
 # to rebuild a matching thumb.  Usually a few seconds is good in case
 # there is ongoing adjustment of the image
-rebuild_wait = 4.0
+rebuild_wait = 0.5
 
 # Max length of thumb on the long side
-thumb_length = 150
+thumb_length = 180
 
 # Separation between thumbs in pixels
-thumb_sep = 15
+thumb_hsep = 15
+thumb_vsep = 15
 
-# Sort the thumbs alphabetically
-#sort_order = 'alpha'
+# Sort the thumbs alphabetically: 'alpha' or None
 sort_order = None
 
 # Thumbnail label length in num of characters (None = no limit)
 label_length = 25
 
-# Cut off long label ('left', 'right' or None)
+# Cut off long label ('left', 'right', or None)
 label_cutoff = 'right'
 
 # Option to highlight images that are displayed in channels.
 # If set to True this option will only highlight the image that is in the
 # channel with the keyboard focus
-highlight_tracks_keyboard_focus = False
+highlight_tracks_keyboard_focus = True
 
 # Highlighted label colors
-label_bg_color = 'yellow'
-label_font_color = 'black'
+label_bg_color = 'lightgreen'
+label_font_color = 'white'
+
+label_font_size = 10
 
 # Controls the speed of scrolling/panning in Thumbs pane
 thumb_pan_accel = 1.5
-
