--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,12 @@ env:
         # add astropy and astropy-ci-extras by default.
         - CONDA_CHANNELS='astropy-ci-extras astropy'
 
+        # PEP8 errors/warnings (also see setup.cfg):
+        # E265: block comment should start with '#'
+        # E266: too many leading '#' for block comment
+        # E501: line too long
+        - FLAKE8_OPT="--select=E265,E266,E501"
+
     matrix:
         # Make sure that egg_info works without dependencies
         - SETUP_CMD='egg_info'
@@ -78,13 +84,13 @@ matrix:
         - python: 3.6
           env: NUMPY_VERSION=prerelease ASTROPY_VERSION=development
 
-        # Do a PEP8 test with pycodestyle
+        # Do a PEP8 test with flake8
         - python: 3.6
-          env: MAIN_CMD='pycodestyle ginga --count' SETUP_CMD=''
+          env: MAIN_CMD='flake8 ginga --count $FLAKE8_OPT' SETUP_CMD=''
 
     allow_failures:
         - python: 3.6
-          env: MAIN_CMD='pycodestyle ginga --count' SETUP_CMD=''
+          env: MAIN_CMD='flake8 ginga --count $FLAKE8_OPT' SETUP_CMD=''
 
 before_install:
 
