Refactor doc for Compose, Crosshair, Cuts, Drawing, and Histogram local plugins.

--- a/ginga/examples/configs/plugin_Cuts.cfg
+++ b/ginga/examples/configs/plugin_Cuts.cfg
@@ -19,7 +19,7 @@ show_cuts_legend = False
 enable_slit = False
 
 # Default cut colors
-cut_colors = ['magenta', 'skyblue2', 'chartreuse2', 'cyan', 'pink', 'burlywood2', 'yellow3', 'turquoise', 'coral1', 'mediumpurple2']
+colors = ['magenta', 'skyblue2', 'chartreuse2', 'cyan', 'pink', 'burlywood2', 'yellow3', 'turquoise', 'coral1', 'mediumpurple2']
 
 # If set to True, will update graph continuously as cursor is dragged
 # around image
