--- a/ginga/examples/configs/plugin_FBrowser.cfg
+++ b/ginga/examples/configs/plugin_FBrowser.cfg
@@ -3,26 +3,26 @@
 #
 # Place this in file under ~/.ginga with the name "plugin_FBrowser.cfg"
 
-# Set to a specific directory to choose a starting point for file exploration
+# Set to a specific directory to choose a starting point for file exploration.
+# If None is given, it defaults to your HOME.
 home_path = None
 
 # This controls whether the plugin scans the FITS headers to create the
 # listing (slow for large numbers of files)
-scan_fits_headers = True
+scan_fits_headers = False
 
 # If the number of files in the listing is greater than this, don't do
 # a scan on the headers
-scan_limit = 1000
+scan_limit = 100
 
 # if scan_fits_headers is True, then the keywords provides a map between
 # attributes and FITS header keywords to fetch from the header
-keywords = [ ('object', 'OBJECT'), ('date_obs', 'DATE-OBS'), ('time_ut', 'UT'), ]
+keywords = [('Object', 'OBJECT'), ('Date', 'DATE-OBS'), ('Time UT', 'UT')]
 
 # columns lists the column headers and attributes to show in the listing.
 # If you want to include FITS keywords, be sure to include the attributes
-# defined in the keywords preference (i.e. 'time_ut', 'object')
-#columns = [('Name', 'name'), ('Size', 'st_size_str'), ('Mode', 'st_mode_oct'), ('Last Changed', 'st_mtime_str') ]
-columns = [('Name', 'name'), ('Object', 'object'), ('Date Obs', 'date_obs'), ('Time Obs', 'time_ut'), ('Size', 'st_size_str'), ('Mode', 'st_mode_oct'), ('Last Changed', 'st_mtime_str') ]
+# defined in the keywords preference (i.e., 'Time UT', 'Object')
+columns = [('Type', 'icon'), ('Name', 'name'), ('Size', 'st_size_str'), ('Mode', 'st_mode_oct'), ('Last Changed', 'st_mtime_str')]
 
 # If True, color every other row in alternating shades to improve
 # readability of long tables
@@ -30,6 +30,3 @@ color_alternate_rows = True
 
 # Maximum number of rows that will turn off auto column resizing (for speed)
 max_rows_for_col_resize = 5000
-
-#END
-
