Refactor doc for LineProfile and Mosaic

--- a/ginga/examples/configs/plugin_Mosaic.cfg
+++ b/ginga/examples/configs/plugin_Mosaic.cfg
@@ -37,7 +37,7 @@ allow_expand = True
 # When expanding an image, pad on a side by this many deg
 expand_pad_deg = 0.01
 
-# Maximum delta from center of image (in deg) beyond which new images 
+# Maximum delta from center of image (in deg) beyond which new images
 # are assumed to start a new mosaic. Set to None if you never want this
 # bahavior
 max_center_deg_delta = 2.0
@@ -45,4 +45,5 @@ max_center_deg_delta = 2.0
 # Allow mosaic images to create thumbnail entries
 make_thumbs = False
 
-
+# Reuse existing mosaic for new mosaic (faster)
+reuse_image = False
