Refactor doc for MultiDim

--- a/ginga/examples/configs/plugin_MultiDim.cfg
+++ b/ginga/examples/configs/plugin_MultiDim.cfg
@@ -5,5 +5,4 @@
 
 # If set to True, will auto open the plugin when an image is loaded
 # with NAXIS >= 3
-auto_start_naxis = True
-
+auto_start_naxis = False
