Refactor doc for Ruler, ScreenShot, TVMark, TVMask, and WCSAxes.

--- a/ginga/examples/configs/plugin_TVMark.cfg
+++ b/ginga/examples/configs/plugin_TVMark.cfg
@@ -33,4 +33,5 @@ ra_colname = 'ra'
 dec_colname = 'dec'
 x_colname = 'x'
 y_colname = 'y'
-extra_columns = ['colname1', 'colname2']
+# Extra columns to display; e.g., ['colname1', 'colname2']
+extra_columns = []
