--- a/setup.cfg
+++ b/setup.cfg
@@ -42,3 +42,4 @@ ggrc = ginga.misc.grc:_main
 # I100: import statements are in the wrong order
 # I101: imported names are in the wrong order
 ignore = E265,E266,E501,I100,I101
+exclude = conftest.py
