PEP8 fix for files in util sub-directory

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,4 +43,4 @@ ggrc = ginga.misc.grc:_main
 # I100: import statements are in the wrong order
 # I101: imported names are in the wrong order
 ignore = E265,E266,E402,E501,I100,I101
-exclude = conftest.py
+exclude = conftest.py,six.py
