--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -72,3 +72,8 @@ icc_working_profile = "sRGB"
 # acceptable values are: 'off', 'on' or 'auto' (as needed)
 # NOTE: overridden by channel setting of the same name, if any
 scrollbars = 'auto'
+
+# Set this to True to have Ginga remember the size and position of the
+# last session. This creates/loads ~/.ginga/layout file.
+# Setting this to False would cause Ginga to ignore the file, if exists.
+save_layout = False
