Add E741 to white-list to fix PEP8 test

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,8 @@ ggrc = ginga.misc.grc:_main
 # E266: too many leading '#' for block comment
 # E402: module level import not at top of file
 # E501: line too long
+# E741: ambiguous variable name 'l'
 # I100: import statements are in the wrong order
 # I101: imported names are in the wrong order
-ignore = E265,E266,E402,E501,I100,I101
+ignore = E265,E266,E402,E501,E741,I100,I101
 exclude = conftest.py,six.py
