--- a/.travis.yml
+++ b/.travis.yml
@@ -36,12 +36,6 @@ env:
         # add astropy and astropy-ci-extras by default.
         - CONDA_CHANNELS='astropy-ci-extras astropy'
 
-        # PEP8 errors/warnings (also see setup.cfg):
-        # E265: block comment should start with '#'
-        # E266: too many leading '#' for block comment
-        # E501: line too long
-        - FLAKE8_OPT="--select=E265,E266,E501"
-
     matrix:
         # Make sure that egg_info works without dependencies
         - SETUP_CMD='egg_info'
@@ -82,9 +76,9 @@ matrix:
         - python: 3.6
           env: NUMPY_VERSION=prerelease ASTROPY_VERSION=development
 
-        # Do a PEP8 test with flake8
+        # Do a PEP8 test with flake8 (white-list in setup.cfg)
         - python: 3.6
-          env: MAIN_CMD='flake8 ginga --count $FLAKE8_OPT' SETUP_CMD=''
+          env: MAIN_CMD='flake8 ginga --count' SETUP_CMD=''
 
 before_install:
 
