--- a/setup.cfg
+++ b/setup.cfg
@@ -20,14 +20,14 @@ universal = 1
 
 [metadata]
 package_name = ginga
-description = An astronomical image viewer and toolkit
+description = A scientific image viewer and toolkit
 author = Eric Jeschke
 author_email = eric@naoj.org
 license = BSD
 url = http://ejeschke.github.com/ginga
 edit_on_github = False
 github_project = ejeschke/ginga/
-version = 2.6.6.dev
+version = 2.6.6
 test_suite = ginga.tests.ginga_test_suite
 
 [entry_points]
