Add an exception for flake8 test E129

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ ggrc = ginga.misc.grc:_main
 
 [flake8]
 # Ignoring these for now:
+# E129: visually indented line with same indent as next logical line
 # E265: block comment should start with '#'
 # E266: too many leading '#' for block comment
 # E402: module level import not at top of file
@@ -43,5 +44,5 @@ ggrc = ginga.misc.grc:_main
 # E741: ambiguous variable name 'l'
 # I100: import statements are in the wrong order
 # I101: imported names are in the wrong order
-ignore = E265,E266,E402,E501,E741,I100,I101
+ignore = E129,E265,E266,E402,E501,E741,I100,I101
 exclude = conftest.py,six.py
