--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -75,7 +75,8 @@ scrollbars = 'auto'
 
 # Set this to True to have Ginga remember the size and position of the
 # last session. This creates/loads ~/.ginga/layout file.
-# If you experience trouble starting up Ginga, you may need to remove the
-# ~/.ginga/layout file and restart the program.
+# If you experience trouble starting up Ginga, you may need to either
+# remove the ~/.ginga/layout file and restart the program, or start with
+# the --norestore option
 # Setting this to False would cause Ginga to ignore the file, if exists.
-save_layout = False
+save_layout = True
