Add autoloading/replacing of placeholder icons in Thumbs plugin
- also: PEP-8 fix for threading.Event isSet() API

--- a/ginga/examples/configs/plugin_Thumbs.cfg
+++ b/ginga/examples/configs/plugin_Thumbs.cfg
@@ -52,5 +52,12 @@ label_font_color = 'white'
 
 label_font_size = 10
 
-# Controls the speed of scrolling/panning in Thumbs pane
-thumb_pan_accel = 1.5
+# Load visible thumbs in the background to replace placeholder icons
+autoload_visible_thumbs = True
+
+# Length of time to wait after scrolling to begin autoloading
+autoload_interval = 1.0
+
+# list of attributes to transfer from the channel viewer to the
+# thumbnail generator if the channel has an image in it
+transfer_attrs = ['transforms', 'cutlevels', 'rgbmap']
