Update for release 2.7.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ license = BSD
 url = http://ejeschke.github.com/ginga
 edit_on_github = False
 github_project = ejeschke/ginga/
-version = 2.7.0.dev
+version = 2.7.0
 test_suite = ginga.tests.ginga_test_suite
 
 [entry_points]
