Add option to toggle on/off showing primary header in Header plugin
This adds support for toggling on/off the mixing of the primary HDU
header with the HDU header of the image being shown.

--- a/ginga/examples/configs/plugin_Header.cfg
+++ b/ginga/examples/configs/plugin_Header.cfg
@@ -6,6 +6,9 @@
 # Sort header
 sortable = True
 
+# Include primary header in table output
+include_primary_header = False
+
 # If True, color every other row in alternating shades to improve
 # readability of long tables
 color_alternate_rows = True
