Fixes for focus issued with MDI workspace mode
This fixes a issue with focus in both Qt and Gtk versions of MDI view
of a workspace.

For Qt, dragging a cursor into a channel viewer no longer forces a
page-switch event, which allows the `channel_follows_focus` option to
work correctly (not change the channel) if set to `False`.  The user
must either click in the window or title bar to change the channel.

For Gtk, this fixes an issue where if `enter_focus` is set to `False`,
then the widget would fail to ever get the keyboard focus.

--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -12,9 +12,14 @@ sansFont = 'Arial'
 # is installed
 useMatplotlibColormaps = True
 
+# Focus a viewer if the mouse enters it
+enter_focus = True
+
 # Channel focus follows window focus
-# True is recommended
-channel_follows_focus = True
+channel_follows_focus = False
+
+# Show a focus indicator as a dashed border in windows
+show_focus_indicator = False
 
 # Show startup banner (automatically set after first run)
 showBanner = False
