Updates to handling of enter_focus
- further updates to some handling of focus settings
- enhance documentation in general.cfg

--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -9,29 +9,50 @@ serifFont = 'Times New Roman'
 sansFont = 'Arial'
 
 # Import matplotlib colormaps in addition to our own set if matplotlib
-# is installed
+# is installed.  If True, this option makes all matplotlib colormaps
+# available for use with Ginga
 useMatplotlibColormaps = True
 
-# Focus a viewer if the mouse enters it
+# Focus a viewer if the mouse enters it.
+# True: when the mouse enters a viewer the keyboard focus will be shifted
+# to the viewer as well--this allows you to use key bindings right away.
+# False: the keyboard focus remains in the previous widget until you click
+# to focus the viewer.
+# Recommended value: True
 enter_focus = True
 
-# Channel focus follows window focus
+# Channel focus follows window focus.
+# True: if the keyboard focus transfers to a viewer, the Ginga shell's
+# will change the channel to follow, so all plugins related to a channel
+# change will respond (e.g. Pan, Info, Zoom, etc.)
+# False: the channel is changed by actions that explicitly set the channel,
+# such as clicking on a tab or title bar of a viewer, or clicking in the
+# window to force focus it.
+# Recommended value: False
 channel_follows_focus = False
 
-# Show a focus indicator as a dashed border in windows
+# Show a focus indicator as a dashed border in windows.
+# True: if the viewer widget has the keyboard focus, a dashed line is drawn
+# around the inside edge of the viewer window.  This is especially useful
+# for the grid workspace view, where there are fewer indicators of which
+# channel is active.
+# False: no indicator is shown in the window
+# Recommended value: True
 show_focus_indicator = False
 
-# Show startup banner (automatically set after first run)
+# Show startup banner (automatically set after first run).  This is normally
+# set to False after the first invocation of Ginga
 showBanner = False
 
 # Number of images to keep in memory per channel (0 = unlimited)
-# This is overwritten by numImages in channel_Image.cfg, if exists
+# This is overwritten by numImages in channel_Image.cfg, if exists.
 numImages = 10
 
-# Share the readout widget between channels
-shareReadout = True
+# Share the readout widget between channels.  Recommended setting is True.
+# This primarily affects the Cursor plugin.
+share_readout = True
 
-# Inherit keywords from the primary header when loading HDUs
+# Inherit keywords from the primary header when loading HDUs.
 inherit_primary_header = False
 
 # Interval for updating the field information under the cursor (sec)
