--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -106,3 +106,24 @@ scrollbars = 'auto'
 # the --norestore option
 # Setting this to False would cause Ginga to ignore the file, if exists.
 save_layout = True
+
+# If defined, sets default channels to be created when Ginga starts up.
+# Should be a comma-separated list of channel names.
+# Overridden by --channels option on command line
+#channels = "Incoming,Work,Processed"
+
+# If defined, should be a comma-separated list of plugins to disable (not load).
+# Overridden by --disable-plugins option on command line
+#disable_plugins = "Thumbs,Zoom"
+
+# If defined, should be a comma-separated list of local plugins to load.
+# Overridden by --plugins option on command line
+#local_plugins = "ExposureCalc"
+
+# If defined, should be a comma-separated list of global plugins to load.
+# Overridden by --modules option on command line
+#global_plugins = "IRAF"
+
+# This sets the default channel prefix
+channel_prefix = "Image"
+
