Add support for font scaling on high-dpi displays

--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -127,3 +127,6 @@ save_layout = True
 # This sets the default channel prefix
 channel_prefix = "Image"
 
+# If you are on a high-dpi screen and Ginga's canvas fonts seem too small
+# you can manually scale them using this setting.
+#font_scaling_factor = 2.0
