Enhancements for the PixTable plugin
This adds the following enhancements:
- add RMS to the summary statistics
- add standard move/draw/edit buttons for editing marks
- add a caption box to leave comments with marks
- add keystroke shortcuts to add, move or delete a mark

--- a/ginga/examples/configs/plugin_PixTable.cfg
+++ b/ginga/examples/configs/plugin_PixTable.cfg
@@ -8,3 +8,18 @@ font = 'fixed'
 
 # Default font size
 fontsize = 12
+
+# default size for mark point radius
+mark_radius = 10
+
+# style of point to draw
+mark_style = 'cross'
+
+# color of non-selected marks
+mark_color = 'purple'
+
+# color of selected mark
+select_color = 'cyan'
+
+# whether to update the pixel table when moving a mark around
+drag_update = True
