Add some more exceptions for flake8 warnings

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,5 +44,7 @@ ggrc = ginga.misc.grc:_main
 # E741: ambiguous variable name 'l'
 # I100: import statements are in the wrong order
 # I101: imported names are in the wrong order
-ignore = E129,E265,E266,E402,E501,E741,I100,I101
+# W504: line break after binary operator
+# F841: local variable '%s' is assigned to but never used
+ignore = E129,E265,E266,E402,E501,E741,I100,I101,W504,F841
 exclude = conftest.py,six.py
