--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ auto_use = True
 universal = 1
 
 [metadata]
-package_name = ginga
+name = ginga
 description = A scientific image viewer and toolkit
 author = Ginga Maintainers
 author_email = eric@naoj.org
@@ -28,7 +28,34 @@ url = http://ejeschke.github.com/ginga
 edit_on_github = False
 github_project = ejeschke/ginga/
 version = 3.0.dev
-test_suite = ginga.tests.ginga_test_suite
+keywords = scientific, image, viewer, numpy, toolkit, astronomy, FITS
+classifiers =
+    Intended Audience :: Science/Research
+    License :: OSI Approved :: BSD License
+    Operating System :: MacOS :: MacOS X
+    Operating System :: Microsoft :: Windows
+    Operating System :: POSIX
+    Programming Language :: C
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3
+    Topic :: Scientific/Engineering :: Astronomy
+    Topic :: Scientific/Engineering :: Physics
+
+[options]
+zip_safe = False
+packages = find:
+python_requires = >=3.5
+setup_requires = numpy>=1.13
+install_requires = numpy>=1.13; qtpy>=1.1; astropy>=3
+tests_require = pytest
+
+[options.extras_require]
+recommended = pillow>=3.2.0; scipy>=0.18.1; matplotlib>=1.5.1; opencv-python>=3.4.1; piexif>=1.0.13; beautifulsoup4>=4.3.2
+docs = sphinx-astropy
+gtk3 = pycairo; pygobject
+qt5 = PyQt5; QtPy>=1.1
+tk = aggdraw
+web = tornado; aggdraw
 
 [entry_points]
 ginga = ginga.rv.main:_main
