Update example plugin config file

--- a/ginga/examples/configs/plugin_Pick.cfg
+++ b/ginga/examples/configs/plugin_Pick.cfg
@@ -28,6 +28,10 @@ quick_from_peak = True
 quick_update_interval = 0.25
 quick_drag_only = True
 
+# should the pick shape recenter on the found object center, if any?
+# useful for "tracking" an object that is moving from image to image
+center_on_pick = False
+
 # Star candidate search parameters
 radius = 10
 # Set threshold to None to auto calculate it
