ENH: Add sort options for MultiDim

--- a/ginga/examples/configs/plugin_MultiDim.cfg
+++ b/ginga/examples/configs/plugin_MultiDim.cfg
@@ -2,3 +2,18 @@
 # MultiDim plugin preferences file
 #
 # Place this in file under ~/.ginga with the name "plugin_MultiDim.cfg"
+
+# Sort option for HDU listing.
+# Available attributes:
+#   'index' -- Extension index
+#   'name' -- Extension name
+#   'extver' -- Extension version number
+#   'htype' -- HDU type (PrimaryHDU, ImageHDU, TableHDU)
+#   'dtype' -- Data type
+# Example to sort by HDU name and extver:
+#   sort_keys = ['name', 'extver']
+# Default is to sort by index only:
+sort_keys = ['index']
+
+# Reverse for HDU listing?
+sort_reverse = False
