Update maintainers info and copyright for year 2019

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,7 @@ universal = 1
 [metadata]
 package_name = ginga
 description = A scientific image viewer and toolkit
-author = Eric Jeschke
+author = Ginga Maintainers
 author_email = eric@naoj.org
 license = BSD
 url = http://ejeschke.github.com/ginga
