Simplify the code for some plugins and add multiple open/close
This refactoring does two primary things:

- simplifies the code for some global plugins, so that instead of
  stacking widget panels constructed for each channel and changing the
  stack order, just creates one panel and updates it as the channel
  focus changes.

- add proper start/stop methods for some plugins that were assumed to
  operate from program startup to shutdown.  This allows them to be used
  in a more dynamic fashion, if desired

--- a/ginga/examples/configs/plugin_Cursor.cfg
+++ b/ginga/examples/configs/plugin_Cursor.cfg
@@ -3,4 +3,8 @@
 #
 # Place this in file under ~/.ginga with the name "plugin_Cursor.cfg"
 
-share_readout = True
+# Set to a particular font if you like one
+font_name = 'fixed'
+
+# Set to a point size if you have a preference
+font_size = None
