Add the new options to example config files
also added a mention in plugin docstrings

--- a/ginga/examples/configs/plugin_Contents.cfg
+++ b/ginga/examples/configs/plugin_Contents.cfg
@@ -24,3 +24,6 @@ row_font_color = 'green'
 
 # Maximum number of rows that will turn off auto column resizing (for speed)
 max_rows_for_col_resize = 100
+
+# Add a close button to this plugin, so that it can be stopped
+closeable = False
