--- a/ginga/examples/configs/plugin_Pan.cfg
+++ b/ginga/examples/configs/plugin_Pan.cfg
@@ -17,3 +17,7 @@ compass_color = 'skyblue'
 
 # rotate the pan image if the main image is rotated?
 rotate_pan_image = True
+
+# Add a close button to this plugin, so that it can be stopped
+closeable = False
+
