--- a/ginga/examples/configs/plugin_Thumbs.cfg
+++ b/ginga/examples/configs/plugin_Thumbs.cfg
@@ -61,3 +61,6 @@ autoload_interval = 1.0
 # list of attributes to transfer from the channel viewer to the
 # thumbnail generator if the channel has an image in it
 transfer_attrs = ['transforms', 'cutlevels', 'rgbmap']
+
+# Add a close button to this plugin, so that it can be stopped
+closeable = False
