--- a/ginga/examples/configs/plugin_Downloads.cfg
+++ b/ginga/examples/configs/plugin_Downloads.cfg
@@ -3,8 +3,7 @@
 #
 # Place this in file under ~/.ginga with the name "plugin_Downloads.cfg"
 
-# automatically delete download entries from the downloads pane when they
+# Automatically delete downloaded entries from the downloads pane when they
 # complete
 auto_remove_download = False
-
 
