Fixes suggested by reviewer

--- a/ginga/examples/configs/plugin_Downloads.cfg
+++ b/ginga/examples/configs/plugin_Downloads.cfg
@@ -3,7 +3,7 @@
 #
 # Place this in file under ~/.ginga with the name "plugin_Downloads.cfg"
 
-# Automatically delete downloaded entries from the downloads pane when they
-# complete
-auto_remove_download = False
+# Automatically clear info about downloaded entries from the downloads
+# pane when they complete
+auto_clear_download = False
 
