Add ability to use JSON formatted config files
- for plugins and layout

--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -96,10 +96,15 @@ icc_working_profile = "sRGB"
 # NOTE: overridden by channel setting of the same name, if any
 scrollbars = 'auto'
 
+# Name of a layout file in ~/.ginga that specifies the UI layout of the
+# program (default is 'layout.json').  This is only used if 'save_layout'
+# (see below) is True
+layout_file = 'layout.json'
+
 # Set this to True to have Ginga remember the size and position of the
-# last session. This creates/loads ~/.ginga/layout file.
+# last session. This creates/loads the layout file specified by 'layout_file'
 # If you experience trouble starting up Ginga, you may need to either
-# remove the ~/.ginga/layout file and restart the program, or start with
+# remove the layout file and restart the program, or start with
 # the --norestore option
 # Setting this to False would cause Ginga to ignore the file, if exists.
 save_layout = True
