Updated to allow specifying download directory via settings file

--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -127,3 +127,8 @@ channel_prefix = "Image"
 # If you are on a high-dpi screen and Ginga's canvas fonts seem too small
 # you can manually scale them using this setting.
 #font_scaling_factor = 2.0
+
+# Sets the area for download (e.g. when a URI is dragged into a channel)
+# Default value of None will use an area in the standard platform-specific
+# temp directory (as defined by Python's 'tempfile' module)
+#download_folder = None
