--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,15 +18,15 @@ environment:
 
   matrix:
 
-      # We test Python 3.7 and 3.6 here.
+      # We test Python 2.7 and 3.7 here.
 
       - PYTHON_VERSION: "2.7"
-        ASTROPY_VERSION: "1.3"
-        NUMPY_VERSION: "1.12"
+        ASTROPY_VERSION: "2"
+        NUMPY_VERSION: "1.15"
 
-      - PYTHON_VERSION: "3.6"
-        ASTROPY_VERSION: "2.0"
-        NUMPY_VERSION: "1.13"
+      - PYTHON_VERSION: "3.7"
+        ASTROPY_VERSION: "stable"
+        NUMPY_VERSION: "stable"
 
 platform:
     -x64
