--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ matrix:
         # Check for sphinx doc build warnings - we do this first because it
         # may run for a long time
         - os: linux
-          env: PYTHON_VERSION=3.6 SETUP_CMD='build_docs -w' PIP_DEPENDENCIES='sphinx-astropy pillow'
+          env: PYTHON_VERSION=3.6 SETUP_CMD='build_docs -w' PIP_DEPENDENCIES='sphinx-astropy sphinx_rtd_theme pillow'
 
         # Try older Numpy versions
         - os: linux
