--- a/ginga/examples/configs/plugin_Histogram.cfg
+++ b/ginga/examples/configs/plugin_Histogram.cfg
@@ -11,3 +11,9 @@ num_bins = 2048
 
 # Histogram color
 hist_color = 'aquamarine'
+
+# Calculate extra statistics on box
+show_stats = True
+
+# Controls formatting (width) of statistics numbers
+maxdigits = 7
