--- a/.travis.yml
+++ b/.travis.yml
@@ -77,6 +77,9 @@ matrix:
         - os: linux
           env: ASTROPY_VERSION=development CONDA_DEPENDENCIES='pyqt matplotlib'
 
+        # Try on Windows
+        - os: windows
+
         # Try with Numpy pre-release (this is skipped unless pre-release is available)
         - os: linux
           env: NUMPY_VERSION=prerelease CONDA_DEPENDENCIES='pyqt matplotlib'
